<resources>
    <string name="app_name">TipSplit</string>
    <string name="bill_amount_with_tax">Bill Amount with Tax:</string>
    <string name="tip_percent">Tip Percent :</string>
    <string name="total_with_tip">Total with Tip :</string>
    <string name="total_per_person">Total per Person:</string>
    <string name="tip_amount">Tip Amount :</string>
    <string name="number_of_people">Number of People :</string>
    <string name="clear">Clear</string>
    <string name="go">Go</string>
    <string name="radio_12">12%</string>
    <string name="radio18">18%</string>
    <string name="radio15">15%</string>
    <string name="radio20">20%</string>
    <string name="dollar"></string>
</resources>