<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/BillAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="36dp"
        android:text="@string/bill_amount_with_tax"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.083"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/TipPercent"
        android:layout_width="171dp"
        android:layout_height="26dp"
        android:layout_marginTop="40dp"
        android:text="@string/tip_percent"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.166"
        app:layout_constraintStart_toStartOf="@+id/BillAmount"
        app:layout_constraintTop_toBottomOf="@+id/BillAmount" />

    <TextView
        android:id="@+id/TipAmount"
        android:layout_width="170dp"
        android:layout_height="35dp"
        android:layout_marginTop="84dp"
        android:text="@string/tip_amount"

        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toStartOf="@+id/TipPercent"
        app:layout_constraintTop_toBottomOf="@+id/TipPercent" />

    <TextView
        android:id="@+id/TotalwithTip"
        android:layout_width="170dp"
        android:layout_height="25dp"
        android:layout_marginTop="16dp"
        android:text="@string/total_with_tip"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/TipAmount"
        app:layout_constraintTop_toBottomOf="@+id/TipAmount" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/NumberofPeople"
        android:layout_width="170dp"
        android:layout_height="28dp"
        android:layout_marginEnd="20dp"
        android:text="@string/number_of_people"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toBaselineOf="@+id/numberOfPeople"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.21"
        app:layout_constraintStart_toStartOf="@+id/TotalwithTip" />

    <EditText
        android:id="@+id/numberOfPeople"
        android:layout_width="82dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:background="#CCF5BF"
        android:ems="10"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/Go"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/divider"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/Go"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:onClick="doPerPersonCalc"
        android:text="@string/go"
        app:layout_constraintBaseline_toBaselineOf="@+id/numberOfPeople"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/TotalperPerson"
        android:layout_width="170dp"
        android:layout_height="22dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="36dp"
        android:text="@string/total_per_person"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/NumberofPeople"
        app:layout_constraintTop_toBottomOf="@+id/numberOfPeople" />

    <Button
        android:id="@+id/Clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="64dp"
        android:onClick="doClear"
        android:text="@string/clear"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/TotalperPerson"
        app:layout_constraintVertical_bias="1.0" />

    <View
        android:id="@+id/divider"
        android:layout_width="350dp"
        android:layout_height="0.75dp"
        android:layout_marginTop="44dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TotalwithTip" />

    <EditText
        android:id="@+id/billAmount"
        android:layout_width="148dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:background="#CCF5BF"
        android:ems="10"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        app:layout_constraintBaseline_toBaselineOf="@+id/BillAmount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        tools:ignore="SpeakableTextPresentCheck" />

    <RadioGroup
        android:id="@+id/RadioGroup"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TipPercent">

        <RadioButton
            android:id="@+id/radioButton12"
            android:layout_width="69dp"
            android:layout_height="48dp"
            android:buttonTint="@color/purple_500"
            android:onClick="doCalcTotalTip"
            android:text="@string/radio_12"
            android:textColorHighlight="@color/purple_500"
            android:textColorLink="@color/purple_500" />

        <RadioButton
            android:id="@+id/radioButton15"
            android:layout_width="69dp"
            android:layout_height="48dp"
            android:buttonTint="@color/purple_500"
            android:onClick="doCalcTotalTip"
            android:text="@string/radio15" />

        <RadioButton
            android:id="@+id/radioButton18"
            android:layout_width="69dp"
            android:layout_height="match_parent"
            android:backgroundTint="@color/purple_500"
            android:buttonTint="@color/purple_500"
            android:onClick="doCalcTotalTip"
            android:text="@string/radio18"
            android:textColorHighlight="@color/purple_700" />


        <RadioButton
            android:id="@+id/radioButton20"
            android:layout_width="69dp"
            android:layout_height="48dp"
            android:buttonTint="@color/purple_500"
            android:onClick="doCalcTotalTip"
            android:text="@string/radio20" />
    </RadioGroup>

    <TextView
        android:id="@+id/totalPerperson"
        android:layout_width="180dp"
        android:layout_height="35dp"
        android:background="#E1E3E5"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/TotalperPerson"
        app:layout_constraintEnd_toEndOf="@+id/Go"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline2" />

    <TextView
        android:id="@+id/tipAmount"
        android:layout_width="149dp"
        android:layout_height="33dp"
        android:layout_marginStart="28dp"
        android:background="#E1E3E5"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/TipAmount"
        app:layout_constraintStart_toStartOf="@+id/guideline2" />

    <TextView
        android:id="@+id/tipTotal"
        android:layout_width="149dp"
        android:layout_height="33dp"
        android:background="#E1E3E5"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/TotalwithTip"
        app:layout_constraintEnd_toEndOf="@+id/tipAmount" />

</androidx.constraintlayout.widget.ConstraintLayout>